--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-    id 'maven-publish'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.30'
+    id "com.github.johnrengelman.shadow" version "6.0.0"
+    id "io.codearte.nexus-staging" version "0.30.0"
+    id "org.jetbrains.dokka" version "1.4.30"
 }
-
-group 'com.ackee'
-version '0.0.1'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "systems.danger:danger-kotlin-sdk:1.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.30"
+    implementation "systems.danger:danger-kotlin-sdk:1.2"
     testImplementation "com.google.truth:truth:1.0.1"
 }
 
@@ -24,14 +24,13 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.ackee'
-            artifactId = 'danger-commit-lint'
-            version = '0.0.1'
+// publishing
+ext.libProperties = new Properties()
+ext.libProperties.load(file("${rootDir}/lib.properties").newReader())
 
-            from components.java
-        }
-    }
+ext {
+    PUBLISH_ARTIFACT_ID = 'danger-kotlin-commit-lint'
+    POM_DESCRIPTION = 'Plugin for danger-kotlin linting your commits'
 }
+
+apply from: "${rootProject.projectDir}/gradle/mavencentral/publish.gradle"
